# fstats

./: .gitignore  CMakeLists.txt  README.md  annotated.html  annotated_dup.js  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  distributions__t_8f90_source.html  docs.md  experimental__design__implementation_8f90_source.html  files.html  fpm.toml  fstats_8f90_source.html  functions.html  index.html  inherit_graph_0.dot  inherit_graph_13.dot  inherit_graph_18.dot  inherit_graph_19.dot  inherit_graph_20.dot  inherit_graph_22.dot  inherit_graph_3.dot  inherit_graph_30.dot  inherit_graph_6.dot  inherit_graph_9.dot  inherits.html  interfacefstats_1_1anova.html  interfacefstats_1_1beta.html  interfacefstats_1_1coefficient__matrix.html  interfacefstats_1_1covariance__matrix.html  interfacefstats_1_1digamma.html  interfacefstats_1_1distribution__function-members.html  interfacefstats_1_1distribution__function.html  interfacefstats_1_1distribution__property.html  interfacefstats_1_1f__test.html  interfacefstats_1_1full__factorial.html  interfacefstats_1_1incomplete__gamma__lower.html  interfacefstats_1_1incomplete__gamma__upper-members.html  interfacefstats_1_1incomplete__gamma__upper.html  interfacefstats_1_1iteration__update-members.html  (+28 more)
cmake/: helper.cmake  mingw-w64-x86_64-toolchain.cmake
configure/: CMakeLists.txt  template.cmake
dependencies/: CMakeLists.txt
dependencies/collections/: CMakeLists.txt
dependencies/ferror/: CMakeLists.txt
dependencies/linalg/: CMakeLists.txt
doc/: Doxyfile  index.html  search.html
docs/: Doxyfile
examples/: CMakeLists.txt  allan_example.f90  anova_example_1.f90  bootstrap_example.f90  bootstrap_regression_example.f90  box_muller_example.f90  distribution_example.f90  full_factorial_example.f90  interpolation_example.f90  lowess_example.f90  mcmc_example.f90  mcmc_regression_example.f90  mcmc_regression_example_2.f90  mcmc_regression_example_3.f90  nl_regression_example.f90  regression_example.f90  rejection_sample_example.f90
examples/data/: noise_data.csv
examples/fortran_csv_module/: CMakeLists.txt
examples/fplot/: CMakeLists.txt
install/: CMakeLists.txt  fstatsConfig.cmake.in  template.pc
interface/: adjusted_r_squared.html  allan_variance.html  anova.html  beta.html  bootstrap_resampling_routine.html  bootstrap_statistic_routine.html  box_muller_sample.html  coefficient_matrix.html  confidence_interval.html  covariance_matrix.html  digamma.html  distribution_function.html  distribution_property.html  doe_evaluate_model.html  f_test.html  full_factorial.html  get_full_factorial_matrix_size.html  incomplete_gamma_lower.html  interp_routine.html  iteration_update.html  jacobian.html  linear_least_squares.html  median.html  multivariate_distribution_function.html  nonlinear_least_squares.html  pooled_variance.html  quantile.html  r_squared.html  regression_function.html  sgemm.html  standard_deviation.html  t_test_paired.html
lists/: files.html  modules.html  procedures.html  types.html
module/: allan.html  distributions_f.html  distributions_t.html  external.html  fstats.html  fstats_allan.html  fstats_anova.html  fstats_bootstrap.html  fstats_descriptive_statistics.html  fstats_distributions.html  fstats_errors.html  fstats_experimental_design.html  fstats_helper_routines.html  fstats_hypothesis.html  fstats_interp.html  fstats_mcmc.html  fstats_regression.html  fstats_sampling.html  fstats_smoothing.html  fstats_special_functions.html  fstats_types.html  levenberg_marquardt.html  special_functions_beta.html
mt/: mt_fstats.f90
proc/: adjusted_r_squared.html  allan_variance.html  bartletts_test.html  beta.html  bootstrap.html  bootstrap_linear_least_squares.html  bootstrap_nonlinear_least_squares.html  box_muller_sample.html  calculate_regression_statistics.html  coefficient_matrix.html  correlation.html  covariance.html  covariance_matrix.html  design_matrix.html  difference.html  digamma.html  doe_fit_model.html  f_test.html  factorial.html  full_factorial.html  get_full_factorial_matrix_size.html  incomplete_beta.html  incomplete_gamma_lower.html  incomplete_gamma_upper.html  jacobian.html  levenes_test.html  linear_least_squares.html  lowess.html  mean.html  median.html  nonlinear_least_squares.html  quantile.html  r_squared.html  random_resample.html  regularized_beta.html  rejection_sample.html  report_array_size_error.html  report_arrays_not_same_size_error.html  report_iteration_count_error.html  report_matrix_size_error.html  (+16 more)
search/: all_3.js  all_4.js  all_5.js  all_9.js  all_b.js  all_c.js  all_e.js  all_f.js  classes_9.js  classes_c.js  classes_e.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  variables_0.js  variables_3.js  variables_b.js
sourcefile/: distributions_f.f90.html  distributions_t.f90.html  experimental_design_implementation.f90.html  external.f90.html  fstats.f90.html  fstats_allan.f90.html  fstats_anova.f90.html  (+17 more)
src/: CMakeLists.txt  allan.f90  bootstrapping.f90  distributions_binomial.f90  distributions_chisquared.f90  distributions_f.f90  distributions_normal.f90  experimental_design_implementation.f90  external.f90  fstats.f90  fstats_anova.f90  fstats_bootstrap.f90  fstats_descriptive_statistics.f90  fstats_distributions.f90  fstats_errors.f90  fstats_experimental_design.f90  fstats_helper_routines.f90  fstats_hypothesis.f90  fstats_interp.f90  fstats_mcmc.f90  fstats_mcmc_fitting.f90  fstats_regression.f90  fstats_sampling.f90  fstats_smoothing.f90  fstats_special_functions.f90  fstats_types.f90  levenberg_marquardt.f90  regression_implementation.f90  sampling.f90  special_functions_beta.f90  statistics_implementation.f90
tests/: CMakeLists.txt  fstats_allan_tests.f90  fstats_bootstrap_tests.f90  fstats_distribution_tests.f90  fstats_experimental_design_tests.f90  fstats_interp_tests.f90  fstats_mcmc_tests.f90  fstats_nonlinear_regression_tests.f90  fstats_regression_tests.f90  fstats_statistics_tests.f90  fstats_test_helper.f90  fstats_tests.f90
tests/files/: allan_test_data.csv
tests/fortran_test_helper/: CMakeLists.txt
(+523 files in other folders)
